; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_clockevents.c_clockevents_register_notifier.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/time/extr_clockevents.c_clockevents_register_notifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }

@clockevents_lock = common dso_local global i32 0, align 4
@clockevents_chain = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @clockevents_register_notifier(%struct.notifier_block* %0) #0 {
  %2 = alloca %struct.notifier_block*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.notifier_block* %0, %struct.notifier_block** %2, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i32 @spin_lock_irqsave(i32* @clockevents_lock, i64 %5)
  %7 = load %struct.notifier_block*, %struct.notifier_block** %2, align 8
  %8 = call i32 @raw_notifier_chain_register(i32* @clockevents_chain, %struct.notifier_block* %7)
  store i32 %8, i32* %4, align 4
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @spin_unlock_irqrestore(i32* @clockevents_lock, i64 %9)
  %11 = load i32, i32* %4, align 4
  ret i32 %11
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @raw_notifier_chain_register(i32*, %struct.notifier_block*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
